bug_fix: buttons in treeviews are cutting on small screen

--- a/custom/themes/backend_theme_manon/static/src/scss/manon_theme.scss
+++ b/custom/themes/backend_theme_manon/static/src/scss/manon_theme.scss
@@ -110,6 +110,7 @@ body {
     padding: 0.5rem 1.2rem;
     font-size: 14px;
     line-height: 1.3;
+    white-space: normal;
 }
 
 .btn-primary {
